Fixed jumping button

--- a/src/styles/blocks/_card.scss
+++ b/src/styles/blocks/_card.scss
@@ -1,4 +1,5 @@
 .card {
+  transition: transform $transition-duration;
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
@@ -41,6 +42,7 @@
   }
 
   &__buy-link {
+    transition: all $transition-duration;
     margin: $margin;
     padding: 12px 0;
     width: 166px;
@@ -54,9 +56,10 @@
     font-weight: 700;
     line-height: 16px;
     text-transform: uppercase;
+    box-sizing: border-box;
+    border: 1px solid $blue-accent;
 
     &:hover {
-      transition-duration: $transition-duration;
       box-sizing: border-box;
       border: 1px solid $blue-accent;
       background-color: $white;
@@ -65,7 +68,6 @@
   }
 
   &:hover {
-    transition-duration: $transition-duration;
     transform: scale(1.2);
 
     .card__title {
