--- a/src/styles/blocks/_nav.scss
+++ b/src/styles/blocks/_nav.scss
@@ -14,6 +14,7 @@
   }
 
   &__link {
+    transition: all $transition-duration;
     color: $main-accent;
     align-items: center;
     display: flex;
@@ -24,7 +25,6 @@
     text-wrap: nowrap;
 
     &:hover {
-      transition-duration: $transition-duration;
       color: $blue-accent;
     }
   }
